[gd_scene load_steps=8 format=3 uid="uid://bkhxwjn1gh33y"]

[ext_resource type="Script" uid="uid://du6fqj8ajesq2" path="res://Scripts/heat_move_platform.gd" id="1_gbtd2"]
[ext_resource type="Texture2D" uid="uid://bwd8g7siflg8p" path="res://Assets/Sprites/World/platforms.png" id="2_gbtd2"]
[ext_resource type="PackedScene" uid="uid://boibfcp6guytv" path="res://Scenes/Others/button_plate.tscn" id="4_6s6fs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lxka"]
size = Vector2(36.5, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ls0lm"]
size = Vector2(48, 3)

[sub_resource type="Gradient" id="Gradient_irw6p"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gbtd2"]
gradient = SubResource("Gradient_irw6p")
width = 38
height = 8
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="MovingPlatform" type="AnimatableBody2D"]
z_index = 5
scale = Vector2(1.5, 1.5)
script = ExtResource("1_gbtd2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.3, 1)
texture = ExtResource("2_gbtd2")
region_enabled = true
region_rect = Rect2(16, 16, 32, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7lxka")

[node name="ButtonLeft" parent="." instance=ExtResource("4_6s6fs")]
z_index = -1
position = Vector2(-11, -4.2)

[node name="ButtonRight" parent="." instance=ExtResource("4_6s6fs")]
z_index = -1
position = Vector2(11, -4.2)

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.6666667, 0.6666667)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_ls0lm")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.7764706, 0.043137256, 1)
texture = SubResource("GradientTexture2D_gbtd2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
